# shard-example

./: BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod  maven_install.json
src/test/com/github/bazel_contrib/contrib_rules_jvm/examples/tests_and_lints/: ExampleTest.java
