module(
    name = "shard_example",
    version = "0.0.1",
)

bazel_dep(
    name = "contrib_rules_jvm",
    version = "0.26.0",
)
bazel_dep(
    name = "rules_jvm_external",
    version = "6.0",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.10.2",
        "org.junit.jupiter:junit-jupiter-engine:5.10.2",
        "org.junit.jupiter:junit-jupiter-params:5.10.2",
        "org.junit.jupiter:junit-jupiter:5.10.2",
        "org.junit.platform:junit-platform-launcher:1.10.2",
        "org.junit.platform:junit-platform-reporting:1.10.2",
        "org.junit.platform:junit-platform-suite:1.10.2",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
)
use_repo(
    maven,
    "maven",
    "unpinned_maven",
)
